# dilemna

./: CMakeLists.txt
imgui/: imgui_widgets.cpp
src/: keyhandler.cpp  keyhandler.h  main.cpp  menu.cpp  menu.h  packet.h  packet_manager.cpp  packet_manager.h  state.h
src/callback/: callback.h
src/callback/impl/: character.h  gamedata.h  players.h  reconnect.h
src/packet/: packet.h  packet_manager.cpp  packet_manager.h
src/ux/: keyhandler.h  menu.cpp  menu.h
